# dir_size

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
